--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.15.0",
     "mongoose": "^8.16.0",
+    "nodemailer": "^7.0.3",
     "systemctl": "^0.2.2",
     "validator": "^13.15.15"
   }
